[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/acid_breath.gd" type="Script" id=1]
[ext_resource path="res://art/weapons/acid_breath.png" type="Texture" id=2]

[sub_resource type="ConvexPolygonShape2D" id=1]

custom_solver_bias = 0.0
points = PoolVector2Array( 0, -10, 8.66025, 5, -8.66025, 5 )

[sub_resource type="GDScript" id=2]

script/source = "extends Timer

# class member variables go here, for example:
# var a = 2
# var b = \"textvar\"

func _ready():
	# Called every time the node is added to the scene.
	# Initialization here
	pass

#func _process(delta):
#	# Called every frame. Delta is time since last frame.
#	# Update game logic here.
#	pass
"

[node name="acid_breath" type="Area2D"]

position = Vector2( 0.414627, 0.0460701 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]
speed = 1000

[node name="Sprite" type="Sprite" parent="." index="0"]

z_index = 1
texture = ExtResource( 2 )
_sections_unfolded = [ "Z Index" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

position = Vector2( 0.194963, -7.46763 )
rotation = 3.14159
scale = Vector2( 2.17971, 2.55842 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="lifetime" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 0.2
one_shot = false
autostart = true
script = SubResource( 2 )

[connection signal="body_entered" from="." to="." method="_on_acid_breath_body_entered"]

[connection signal="timeout" from="lifetime" to="." method="_on_lifetime_timeout"]


